# bridge

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.txt
.github/templates/: bug.md  feat.md
bridge/: CMakeLists.txt
bridge/include/: analyzer.hpp  bridge.hpp  directory.hpp  error.hpp  global.hpp  postings.hpp  schema.hpp
bridge/include/analyzer/: analyzer.hpp  regex_analyzer.hpp
bridge/include/bridge/: bridge.hpp  directory.hpp  global.hpp  schema.hpp  store.hpp
bridge/include/bridge/analyzer/: analyzer.hpp  regex_analyzer.hpp
bridge/include/bridge/common/: archives.hpp  serialization.hpp  std_variant_serialization.hpp
bridge/include/bridge/compression/: lz4.h  lz4.hpp  lz4xx.h  lz4xx.hpp
bridge/include/bridge/directory/: devices.hpp  directory.hpp  error.hpp  mmap_directory.hpp  ram_directory.hpp  read_only_source.hpp
bridge/include/bridge/schema/: document.hpp  field.hpp  field_entry.hpp  field_value.hpp  named_field_document.hpp  options.hpp  schema.hpp  term.hpp
bridge/include/bridge/store/: reader.hpp  store.hpp  writer.hpp
bridge/include/common/: serialization.hpp
bridge/include/schema/: document.hpp  field.hpp  field_entry.hpp  field_value.hpp  named_field_document.hpp  options.hpp  schema.hpp  term.hpp
bridge/src/: main.cpp
bridge/src/bridge/compression/: lz4.cpp  lz4xx.cpp
bridge/src/bridge/schema/: document.cpp  field_entry.cpp  options.cpp  schema.cpp  term.cpp
bridge/src/bridge/store/: reader.cpp  writer.cpp
bridge/src/schema/: document.cpp  field_entry.cpp  options.cpp  schema.cpp  term.cpp
tests/: CMakeLists.txt
tests/unit/: analyzer_test.cpp  directory_test.cpp  document_test.cpp  field_test.cpp  named_field_document_test.cpp  schema_options_test.cpp  schema_test.cpp  store_test.cpp  term_test.cpp
